_generated-doc/2.16/config/quarkus-mongodb-config-group-mongo-client-config.adoc

:summaryTableId: quarkus-mongodb-config-group-mongo-client-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-config-group-mongo-client-config_configuration]]link:#quarkus-mongodb-config-group-mongo-client-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.connection-string]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.connection-string[quarkus.mongodb.connection-string]`

[.description]
--
Configures the connection string. The format is: `mongodb://++[++username:password@++]++host1++[++:port1++][++,host2++[++:port2++]++,...++[++,hostN++[++:portN++]]][++/++[++database.collection++][++?options++]]++` 
`mongodb://` is a required prefix to identify that this is a string in the standard connection format. 
`username:password@` are optional. If given, the driver will attempt to log in to a database after connecting to a database server. For some authentication mechanisms, only the username is specified and the password is not, in which case the ":" after the username is left off as well. 
`host1` is the only required part of the connection string. It identifies a server address to connect to. 
`:portX` is optional and defaults to :27017 if not provided. 
`/database` is the name of the database to log in to and thus is only relevant if the `username:password@` syntax is used. If not specified the `admin` database will be used by default. 
`?options` are connection options. Note that if `database` is absent there is still a `/` required between the last host and the `?` introducing the options. Options are name=value pairs and the pairs are separated by "&". 
An alternative format, using the `mongodb{plus}srv` protocol, is:  mongodb{plus}srv://++[++username:password@++]++host++[++/++[++database++][++?options++]]++   
 - `mongodb{plus}srv://` is a required prefix for this format. 
 - `username:password@` are optional. If given, the driver will attempt to login to a database after connecting to a database server. For some authentication mechanisms, only the username is specified and the password is not, in which case the ":" after the username is left off as well 
 - `host` is the only required part of the URI. It identifies a single host name for which SRV records are looked up from a Domain Name Server after prefixing the host name with `"_mongodb._tcp"`. The host/port for each SRV record becomes the seed list used to connect, as if each one were provided as host/port pair in a URI using the normal mongodb protocol. 
 - `/database` is the name of the database to login to and thus is only relevant if the `username:password@` syntax is used. If not specified the "admin" database will be used by default. 
 - `?options` are connection options. Note that if `database` is absent there is still a `/` required between the last host and the `?` introducing the options. Options are name=value pairs and the pairs are separated by "&". Additionally with the mongodb{plus}srv protocol, TXT records are looked up from a Domain Name Server for the given host, and the text value of each one is prepended to any options on the URI itself. Because the last specified value for any option wins, that means that options provided on the URI will override any that are provided via TXT records.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CONNECTION_STRING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CONNECTION_STRING+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.hosts]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.hosts[quarkus.mongodb.hosts]`

[.description]
--
Configures the MongoDB server addressed (one if single mode). The addresses are passed as `host:port`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`127.0.0.1:27017`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.database]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.database[quarkus.mongodb.database]`

[.description]
--
Configure the database name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DATABASE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DATABASE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.application-name]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.application-name[quarkus.mongodb.application-name]`

[.description]
--
Configures the application name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_APPLICATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_APPLICATION_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-pool-size]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-pool-size[quarkus.mongodb.max-pool-size]`

[.description]
--
Configures the maximum number of connections in the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.min-pool-size]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.min-pool-size[quarkus.mongodb.min-pool-size]`

[.description]
--
Configures the minimum number of connections in the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MIN_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MIN_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-connection-idle-time]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-connection-idle-time[quarkus.mongodb.max-connection-idle-time]`

[.description]
--
Maximum idle time of a pooled connection. A connection that exceeds this limit will be closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MAX_CONNECTION_IDLE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MAX_CONNECTION_IDLE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-connection-life-time]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.max-connection-life-time[quarkus.mongodb.max-connection-life-time]`

[.description]
--
Maximum lifetime of a pooled connection. A connection that exceeds this limit will be closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MAX_CONNECTION_LIFE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MAX_CONNECTION_LIFE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.maintenance-frequency]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.maintenance-frequency[quarkus.mongodb.maintenance-frequency]`

[.description]
--
Configures the time period between runs of the maintenance job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MAINTENANCE_FREQUENCY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MAINTENANCE_FREQUENCY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.maintenance-initial-delay]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.maintenance-initial-delay[quarkus.mongodb.maintenance-initial-delay]`

[.description]
--
Configures period of time to wait before running the first maintenance job on the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_MAINTENANCE_INITIAL_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_MAINTENANCE_INITIAL_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.connect-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.connect-timeout[quarkus.mongodb.connect-timeout]`

[.description]
--
How long a connection can take to be opened before timing out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-timeout[quarkus.mongodb.read-timeout]`

[.description]
--
How long a socket read can take before timing out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.tls-insecure]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.tls-insecure[quarkus.mongodb.tls-insecure]`

[.description]
--
If connecting with TLS, this option enables insecure TLS connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_TLS_INSECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_TLS_INSECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.tls]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.tls[quarkus.mongodb.tls]`

[.description]
--
Whether to connect using TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_TLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_TLS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.replica-set-name]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.replica-set-name[quarkus.mongodb.replica-set-name]`

[.description]
--
Implies that the hosts given are a seed list, and the driver will attempt to find all members of the set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_REPLICA_SET_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_REPLICA_SET_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.server-selection-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.server-selection-timeout[quarkus.mongodb.server-selection-timeout]`

[.description]
--
How long the driver will wait for server selection to succeed before throwing an exception.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_SERVER_SELECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_SERVER_SELECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.local-threshold]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.local-threshold[quarkus.mongodb.local-threshold]`

[.description]
--
When choosing among multiple MongoDB servers to send a request, the driver will only send that request to a server whose ping time is less than or equal to the server with the fastest ping time plus the local threshold.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_LOCAL_THRESHOLD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_LOCAL_THRESHOLD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.heartbeat-frequency]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.heartbeat-frequency[quarkus.mongodb.heartbeat-frequency]`

[.description]
--
The frequency that the driver will attempt to determine the current state of each server in the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_HEARTBEAT_FREQUENCY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_HEARTBEAT_FREQUENCY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-concern]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-concern[quarkus.mongodb.read-concern]`

[.description]
--
Configures the read concern. Supported values are: `local++\|++majority++\|++linearizable++\|++snapshot++\|++available`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_READ_CONCERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_READ_CONCERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-preference]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.read-preference[quarkus.mongodb.read-preference]`

[.description]
--
Configures the read preferences. Supported values are: `primary++\|++primaryPreferred++\|++secondary++\|++secondaryPreferred++\|++nearest`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_READ_PREFERENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_READ_PREFERENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.health.database]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.health.database[quarkus.mongodb.health.database]`

[.description]
--
The database used during the readiness health checks

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_HEALTH_DATABASE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_HEALTH_DATABASE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`admin`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.connection-string]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.connection-string[quarkus.mongodb."mongo-client-configs".connection-string]`

[.description]
--
Configures the connection string. The format is: `mongodb://++[++username:password@++]++host1++[++:port1++][++,host2++[++:port2++]++,...++[++,hostN++[++:portN++]]][++/++[++database.collection++][++?options++]]++` 
`mongodb://` is a required prefix to identify that this is a string in the standard connection format. 
`username:password@` are optional. If given, the driver will attempt to log in to a database after connecting to a database server. For some authentication mechanisms, only the username is specified and the password is not, in which case the ":" after the username is left off as well. 
`host1` is the only required part of the connection string. It identifies a server address to connect to. 
`:portX` is optional and defaults to :27017 if not provided. 
`/database` is the name of the database to log in to and thus is only relevant if the `username:password@` syntax is used. If not specified the `admin` database will be used by default. 
`?options` are connection options. Note that if `database` is absent there is still a `/` required between the last host and the `?` introducing the options. Options are name=value pairs and the pairs are separated by "&". 
An alternative format, using the `mongodb{plus}srv` protocol, is:  mongodb{plus}srv://++[++username:password@++]++host++[++/++[++database++][++?options++]]++   
 - `mongodb{plus}srv://` is a required prefix for this format. 
 - `username:password@` are optional. If given, the driver will attempt to login to a database after connecting to a database server. For some authentication mechanisms, only the username is specified and the password is not, in which case the ":" after the username is left off as well 
 - `host` is the only required part of the URI. It identifies a single host name for which SRV records are looked up from a Domain Name Server after prefixing the host name with `"_mongodb._tcp"`. The host/port for each SRV record becomes the seed list used to connect, as if each one were provided as host/port pair in a URI using the normal mongodb protocol. 
 - `/database` is the name of the database to login to and thus is only relevant if the `username:password@` syntax is used. If not specified the "admin" database will be used by default. 
 - `?options` are connection options. Note that if `database` is absent there is still a `/` required between the last host and the `?` introducing the options. Options are name=value pairs and the pairs are separated by "&". Additionally with the mongodb{plus}srv protocol, TXT records are looked up from a Domain Name Server for the given host, and the text value of each one is prepended to any options on the URI itself. Because the last specified value for any option wins, that means that options provided on the URI will override any that are provided via TXT records.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CONNECTION_STRING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CONNECTION_STRING+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.hosts]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.hosts[quarkus.mongodb."mongo-client-configs".hosts]`

[.description]
--
Configures the MongoDB server addressed (one if single mode). The addresses are passed as `host:port`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`127.0.0.1:27017`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.database]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.database[quarkus.mongodb."mongo-client-configs".database]`

[.description]
--
Configure the database name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__DATABASE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__DATABASE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.application-name]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.application-name[quarkus.mongodb."mongo-client-configs".application-name]`

[.description]
--
Configures the application name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__APPLICATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__APPLICATION_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-pool-size]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-pool-size[quarkus.mongodb."mongo-client-configs".max-pool-size]`

[.description]
--
Configures the maximum number of connections in the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.min-pool-size]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.min-pool-size[quarkus.mongodb."mongo-client-configs".min-pool-size]`

[.description]
--
Configures the minimum number of connections in the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MIN_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MIN_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-connection-idle-time]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-connection-idle-time[quarkus.mongodb."mongo-client-configs".max-connection-idle-time]`

[.description]
--
Maximum idle time of a pooled connection. A connection that exceeds this limit will be closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_CONNECTION_IDLE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_CONNECTION_IDLE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-connection-life-time]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.max-connection-life-time[quarkus.mongodb."mongo-client-configs".max-connection-life-time]`

[.description]
--
Maximum lifetime of a pooled connection. A connection that exceeds this limit will be closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_CONNECTION_LIFE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAX_CONNECTION_LIFE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.maintenance-frequency]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.maintenance-frequency[quarkus.mongodb."mongo-client-configs".maintenance-frequency]`

[.description]
--
Configures the time period between runs of the maintenance job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAINTENANCE_FREQUENCY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAINTENANCE_FREQUENCY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.maintenance-initial-delay]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.maintenance-initial-delay[quarkus.mongodb."mongo-client-configs".maintenance-initial-delay]`

[.description]
--
Configures period of time to wait before running the first maintenance job on the connection pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAINTENANCE_INITIAL_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__MAINTENANCE_INITIAL_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.connect-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.connect-timeout[quarkus.mongodb."mongo-client-configs".connect-timeout]`

[.description]
--
How long a connection can take to be opened before timing out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-timeout[quarkus.mongodb."mongo-client-configs".read-timeout]`

[.description]
--
How long a socket read can take before timing out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.tls-insecure]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.tls-insecure[quarkus.mongodb."mongo-client-configs".tls-insecure]`

[.description]
--
If connecting with TLS, this option enables insecure TLS connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__TLS_INSECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__TLS_INSECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.tls]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.tls[quarkus.mongodb."mongo-client-configs".tls]`

[.description]
--
Whether to connect using TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__TLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__TLS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.replica-set-name]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.replica-set-name[quarkus.mongodb."mongo-client-configs".replica-set-name]`

[.description]
--
Implies that the hosts given are a seed list, and the driver will attempt to find all members of the set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__REPLICA_SET_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__REPLICA_SET_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.server-selection-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.server-selection-timeout[quarkus.mongodb."mongo-client-configs".server-selection-timeout]`

[.description]
--
How long the driver will wait for server selection to succeed before throwing an exception.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__SERVER_SELECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__SERVER_SELECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.local-threshold]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.local-threshold[quarkus.mongodb."mongo-client-configs".local-threshold]`

[.description]
--
When choosing among multiple MongoDB servers to send a request, the driver will only send that request to a server whose ping time is less than or equal to the server with the fastest ping time plus the local threshold.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__LOCAL_THRESHOLD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__LOCAL_THRESHOLD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.heartbeat-frequency]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.heartbeat-frequency[quarkus.mongodb."mongo-client-configs".heartbeat-frequency]`

[.description]
--
The frequency that the driver will attempt to determine the current state of each server in the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HEARTBEAT_FREQUENCY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HEARTBEAT_FREQUENCY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-concern]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-concern[quarkus.mongodb."mongo-client-configs".read-concern]`

[.description]
--
Configures the read concern. Supported values are: `local++\|++majority++\|++linearizable++\|++snapshot++\|++available`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_CONCERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_CONCERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-preference]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.read-preference[quarkus.mongodb."mongo-client-configs".read-preference]`

[.description]
--
Configures the read preferences. Supported values are: `primary++\|++primaryPreferred++\|++secondary++\|++secondaryPreferred++\|++nearest`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_PREFERENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__READ_PREFERENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.health.database]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.health.database[quarkus.mongodb."mongo-client-configs".health.database]`

[.description]
--
The database used during the readiness health checks

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HEALTH_DATABASE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__HEALTH_DATABASE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`admin`


h|[[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern-write-concern]]link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern-write-concern[Write concern]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.safe]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.safe[quarkus.mongodb.write-concern.safe]`

[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo 
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_SAFE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_SAFE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.journal]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.journal[quarkus.mongodb.write-concern.journal]`

[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_JOURNAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_JOURNAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.w]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.w[quarkus.mongodb.write-concern.w]`

[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_W+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_W+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.retry-writes]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.retry-writes[quarkus.mongodb.write-concern.retry-writes]`

[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_RETRY_WRITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_RETRY_WRITES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.w-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.write-concern.w-timeout[quarkus.mongodb.write-concern.w-timeout]`

[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_W_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_W_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe[quarkus.mongodb."mongo-client-configs".write-concern.safe]`

[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo 
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal[quarkus.mongodb."mongo-client-configs".write-concern.journal]`

[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w[quarkus.mongodb."mongo-client-configs".write-concern.w]`

[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes[quarkus.mongodb."mongo-client-configs".write-concern.retry-writes]`

[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout[quarkus.mongodb."mongo-client-configs".write-concern.w-timeout]`

[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


h|[[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials-credentials-and-authentication-mechanism]]link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials-credentials-and-authentication-mechanism[Credentials and authentication mechanism]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.username]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.username[quarkus.mongodb.credentials.username]`

[.description]
--
Configures the username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.password]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.password[quarkus.mongodb.credentials.password]`

[.description]
--
Configures the password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-mechanism]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-mechanism[quarkus.mongodb.credentials.auth-mechanism]`

[.description]
--
Configures the authentication mechanism to use if a credential was supplied. The default is unspecified, in which case the client will pick the most secure mechanism available based on the sever version. For the GSSAPI and MONGODB-X509 mechanisms, no password is accepted, only the username. Supported values: null or `GSSAPI++\|++PLAIN++\|++MONGODB-X509++\|++SCRAM_SHA_1++\|++SCRAM_SHA_256++\|++MONGODB_AWS`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-source]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-source[quarkus.mongodb.credentials.auth-source]`

[.description]
--
Configures the source of the authentication credentials. This is typically the database that the credentials have been created. The value defaults to the database specified in the path portion of the connection string or in the 'database' configuration property. If the database is specified in neither place, the default value is `admin`. This option is only respected when using the MONGO-CR mechanism (the default).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-mechanism-properties-auth-mechanism-properties]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.credentials.auth-mechanism-properties-auth-mechanism-properties[quarkus.mongodb.credentials.auth-mechanism-properties]`

[.description]
--
Allows passing authentication mechanism properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.username]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.username[quarkus.mongodb."mongo-client-configs".credentials.username]`

[.description]
--
Configures the username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.password]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.password[quarkus.mongodb."mongo-client-configs".credentials.password]`

[.description]
--
Configures the password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism]`

[.description]
--
Configures the authentication mechanism to use if a credential was supplied. The default is unspecified, in which case the client will pick the most secure mechanism available based on the sever version. For the GSSAPI and MONGODB-X509 mechanisms, no password is accepted, only the username. Supported values: null or `GSSAPI++\|++PLAIN++\|++MONGODB-X509++\|++SCRAM_SHA_1++\|++SCRAM_SHA_256++\|++MONGODB_AWS`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-source]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-source[quarkus.mongodb."mongo-client-configs".credentials.auth-source]`

[.description]
--
Configures the source of the authentication credentials. This is typically the database that the credentials have been created. The value defaults to the database specified in the path portion of the connection string or in the 'database' configuration property. If the database is specified in neither place, the default value is `admin`. This option is only respected when using the MONGO-CR mechanism (the default).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism-properties-auth-mechanism-properties]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism-properties-auth-mechanism-properties[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism-properties]`

[.description]
--
Allows passing authentication mechanism properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern-write-concern]]link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern-write-concern[Write concern]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe[quarkus.mongodb."mongo-client-configs".write-concern.safe]`

[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo 
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal[quarkus.mongodb."mongo-client-configs".write-concern.journal]`

[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w[quarkus.mongodb."mongo-client-configs".write-concern.w]`

[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes[quarkus.mongodb."mongo-client-configs".write-concern.retry-writes]`

[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout[quarkus.mongodb."mongo-client-configs".write-concern.w-timeout]`

[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


h|[[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials-credentials-and-authentication-mechanism]]link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials-credentials-and-authentication-mechanism[Credentials and authentication mechanism]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.username]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.username[quarkus.mongodb."mongo-client-configs".credentials.username]`

[.description]
--
Configures the username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.password]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.password[quarkus.mongodb."mongo-client-configs".credentials.password]`

[.description]
--
Configures the password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism]`

[.description]
--
Configures the authentication mechanism to use if a credential was supplied. The default is unspecified, in which case the client will pick the most secure mechanism available based on the sever version. For the GSSAPI and MONGODB-X509 mechanisms, no password is accepted, only the username. Supported values: null or `GSSAPI++\|++PLAIN++\|++MONGODB-X509++\|++SCRAM_SHA_1++\|++SCRAM_SHA_256++\|++MONGODB_AWS`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-source]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-source[quarkus.mongodb."mongo-client-configs".credentials.auth-source]`

[.description]
--
Configures the source of the authentication credentials. This is typically the database that the credentials have been created. The value defaults to the database specified in the path portion of the connection string or in the 'database' configuration property. If the database is specified in neither place, the default value is `admin`. This option is only respected when using the MONGO-CR mechanism (the default).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism-properties-auth-mechanism-properties]]`link:#quarkus-mongodb-config-group-mongo-client-config_quarkus.mongodb.-mongo-client-configs-.credentials.auth-mechanism-properties-auth-mechanism-properties[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism-properties]`

[.description]
--
Allows passing authentication mechanism properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
